# BlurryFrame

./: .gitignore  .gitmodules  Blur  Blurry.make  BlurryFrame.make  CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake  compile.sh  compile_commands.json  deps-linux.sh  premake5.lua  rename.sh  run.sh  xmain.cpp
.cache/clangd/index/: BlendMode.hpp.65646D57314A5AB8.idx  CircleShape.hpp.298F562BF97305EC.idx  Clipboard.hpp.0B50C3B030FCCF3E.idx  Clock.hpp.4A564708686A9902.idx  Color.hpp.02CEA137414A8BF7.idx  Config.hpp.587FC328870A0053.idx  Context.hpp.3182ED18CA00D462.idx  ContextSettings.hpp.6ADD8FB9CC5D1430.idx  ConvexShape.hpp.6B9FFB080DE8CA79.idx  Cursor.hpp.B23D0E07ABF39695.idx  Drawable.hpp.B09895ABA8BF1BDA.idx  Err.hpp.715F6B418A73DF7B.idx  Event.hpp.975239A9504473F1.idx  Export.hpp.6A21B328185A836A.idx  Export.hpp.7E2A8818E4EA90FE.idx  Export.hpp.EC638E4C156BE0B1.idx  FileInputStream.hpp.8593EF5F09055CD1.idx  Font.hpp.8CA308061775C9E5.idx  (+64 more)
assets/shaders/: basic-frag.glsl  basic-vert.glsl
compile_commands/: release.json
export-compile-commands/: export-compile-commands.lua
include/: core.h  time.hpp
include/graphics/: blurgui.hpp  camera.hpp  renderer.hpp  shader.hpp  window.hpp
include/image/: image.hpp  image_loader.h  image_utils.hpp
include/management/: slide_manager.hpp
libs/: GLAD.make  GLFW.make  GLM.make  ImGui.make
src/: image_loader.cpp  main.cpp  main2.cpp
src/graphics/: blurgui.cpp  renderer.cpp  shader.cpp  window.cpp
src/image/: image.cpp  image_loader.cpp  image_utils.cpp
src/management/: slide_manager.cpp
(+1 files in other folders)
